--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,8 @@
 body {
     background-color: var(--primary-white-color);
     color: var(--primary-text-color);
+
+    font-family: "Roboto", sans-serif;
 }
 
 .list {
@@ -37,6 +39,13 @@ body {
 /* Логотип */
 .logo {
     color: var(--accent-color);
+    font-family: "Raleway", sans-serif;
+
+font-size: 26px;
+line-height: 1.19em;
+/* identical to box height */
+
+letter-spacing: 0.03em;
 }
 
 .logo .logo-studio {
