--- a/css/styles.css
+++ b/css/styles.css
@@ -1,32 +1,21 @@
 :root {
-    --primary-white-color: #FFFFFF;
-    --accent-background-color: #2F303A;
-    --title-text-color: #212121;
-    --primary-text-color: #757575;
-    --accent-color: #2196F3;
+    /* Цвет фона*/
+    --primary-bg-color: #FFFFFF;
     --secondary-bg-color: #F5F4FA;
-    --primary-link-color: rgba(255, 255, 255, 0.6);
-    
+    --accent-bg-color: #2F303A;
 
+    /* Цвет шрифтов */
+    --primary-text-color: #757575;
+    --secondary-text-color: #FFFFFF;
+    --title-text-color: #212121;
+    --logo-text-color: #000000;
+    --accent-color: #2196F3;
+    --primary-link-color: rgba(255, 255, 255, 0.6);
+    --button-hover-color: #188CE8;
 }
 
-/* ! цвет лого в  шапке #2196F3 #000000 */
-/* ! цвет навигации, ссылок при наведении, цвет бэкграунда кнопки в герое #2196F3*/
-/* ! основной цвет навигации, основной цвет заголовка  #212121*/
-/* ! основной цвет контактов, основной цвет текста #757575*/
-/* ! цвет заголовка в герое, цвет шрифта кнопки в герое #FFFFFF */
-/* ! основной цвет ссылок в футере rgba(255, 255, 255, 0.6) */
-/* ! цвет лого в футере #2196F3 #FFFFFF */
-/* !цвет адреса в футере #FFFFFF*/
-
-/* ! цвет бэкграунда героя, футера #2F303A*/
-/* ! цвета бэкграунда Наша команда #F5F4FA */
-/* ! цвет бэкграунда шапки #FFFFFF */
-/* ! цвет бэкграунда для карточек наша команда #FFFFFF */
-
-
 body {
-    background-color: var(--primary-white-color);
+    background-color: var(--primary-bg-color);
     color: var(--primary-text-color);
 
     font-family: "Roboto", sans-serif;
@@ -39,61 +28,59 @@ body {
 
 /* Логотип */
 .logo {
-    color: var(--accent-color);
+    color: var(--logo-text-color);
 
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-    }
+    text-decoration: none;
+}
 
-.logo .logo-studio {
-    color: #000000;
+.part-logo {
+    color: var(--accent-color);
 }
 
 /* Навигация по сайту */
-.site-nav {
+.site-nav .link{
+    color: var(--title-text-color);
+
     font-weight: 500;
     font-size: 14px;
-    line-height: 1,14;
+    line-height: 1.14;
     letter-spacing: 0.02em;
+    text-decoration: none;
 }
 
-.site-nav .link{
-    color: var(--title-text-color)
-}
-
-.site-nav .link:hover, .site-nav .link:focus {
+.site-nav .link:hover, 
+.site-nav .link:focus, 
+.site-nav .link.current{
     color: var(--accent-color);
 }   
 
-.site-nav .link.current {
-    color: var(--accent-color);
-}
+.auth-nav .link {
+    color: var(--primary-text-color);
 
-.auth-nav {
     font-weight: 500;
     font-size: 14px;
     line-height: 1,14;
     letter-spacing: 0.02em;
+    text-decoration: none;
 }
 
-.auth-nav .link {
-    color: var(--primary-text-color);
-}
-
-.auth-nav .link:hover, .auth-nav .link:focus  {
+.auth-nav .link:hover, 
+.auth-nav .link:focus  {
     color: var(--accent-color); 
 }
 
 /* Баннер (блог-герой) */
 .hero {
-    background-color: var(--accent-background-color);
+    background-color: var(--accent-bg-color);
 }
 
 .hero-title {
-    color: var(--primary-white-color);
+    color: var(--secondary-text-color);
 
     font-weight: 900;
     font-size: 44px;
@@ -103,11 +90,28 @@ body {
     text-transform: uppercase;
 }
 
-/* Секция */
-.section {
-
+/* Кнопка заказа*/
+.order-button {
+    background-color: var(--accent-color);
+    color: var(--secondary-text-color);
+    
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-decoration: none;
+    cursor: pointer;
 }
 
+.order-button:hover, 
+.order-button:focus {
+    background-color: var(--button-hover-color);
+}
+
+/* Секция */
 .section-title {
     color: var(--title-text-color);
 
@@ -128,7 +132,6 @@ body {
 }
 
 .features-list .text {
-    font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
 }
@@ -140,7 +143,8 @@ body {
     background-color: var(--secondary-bg-color);
 }
 
-.our-team-list {
+.our-team-list .text, 
+.our-team-list .title {
     font-size: 16px;
     line-height: 1.19;
     /* identical to box height */
@@ -152,36 +156,77 @@ body {
     font-weight: 500;
 }
 
-.our-team-list .text {
-    font-weight: 400;
-}
 
-/* Кнопка */
-.button.primary {
-    background-color: var(--accent-color);
-    color: var(--primary-white-color);
-}
-
-.button.primary:hover, .button.primary:focus {
-
-}
-
-.button.secondary {
-    background-color: var(--secondary-bg-color);
-    color: var(--title-text-color);
-}
-
-.button.secondary:hover, .button.secondary:focus {
-    background-color: var(--accent-color);
-    color: var(--primary-white-color);
-}
 /* Футер */
 footer {
-    background-color: var(--accent-background-color);
+    background-color: var(--accent-bg-color);
 }
 
+footer .logo {
+    color: var(--secondary-text-color);
+}
+.address-nav {
+    font-style: normal;
+    font-size: 14px;
+    line-height: 1.71;
+}
 
+.address-nav .link{
+    color: var(--primary-link-color);
+
+    text-decoration: none;
+}
+
+.footer-address {
+    color: var(--secondary-text-color);
+
+    text-decoration: none;
+}
+
+.address-nav .link:hover, 
+.address-nav .link:focus {
+    color: var(--accent-color);
+    
+}
+/* Стили для портфолио */
+
+/* Кнопки фильтра */
+.filter-button {
+    background-color: var(--secondary-bg-color);
+    color: var(--title-text-color);
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+}
+    
+.filter-button:hover, .filter-button:focus {
+    background-color: var(--accent-color);
+    color: var(--secondary-text-color);
+}
 /* Наши работы */
+.examples-list .link {
+    text-decoration: none;
+}
 
+.examples-list .title {
+    color: var(--title-text-color);
+
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+}
+
+.examples-list .text {
+    color: var(--primary-text-color);
+
+    font-style: normal;
+    font-size: 16px;
+    line-height: 1.88;
+    /* identical to box height, or 188% */
+}
 
 
